# memori

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_integration.py
app/: main.py
app/api/: routes_admin.py  routes_chat.py
app/bot_config/: loader.py  registry.py
app/core/: context_assembler.py  intent_predictor.py  models.py  pipeline.py  prompt_builder.py
app/providers/: llm.py  memory.py
app/utils/: session.py
configs/: example_bot.yaml
evals/: README.md  __init__.py  llm_factory.py  metrics.py  run_locomo.py  run_longmemeval.py  runner.py
evals/configs/: baseline.yaml  full.yaml  hybrid.yaml  smart_ops.yaml  summaries.yaml
memory_system/: __init__.py  _client.py  analytics.py  cache.py  hooks.py
memory_system/config/: factory.py  loader.py  registry.py  settings.py
memory_system/core/: __init__.py  context_assembler.py  intent_predictor.py  memory_models.py  models.py  pipeline.py  prompt_builder.py  protocols.py
memory_system/dashboard/: app.py
memory_system/discovery/: auto_intent.py
memory_system/ingestion/: __init__.py  audio.py  chunker.py  detect.py  image.py  pdf.py  url.py
memory_system/integrations/: base.py  crewai.py  langchain.py  litellm_wrapper.py  openai_agents.py
memory_system/memory/: context.py  extractor.py  lifecycle.py  manager.py  memory.py  profiles.py  smart_ops.py  summary_tree.py
memory_system/providers/: __init__.py  in_memory_stores.py  llm.py  neo4j_store.py  qdrant_store.py  redis_store.py  session.py
memory_system/retrieval/: __init__.py  bm25.py  fusion.py  hybrid.py  rerank.py
memory_system/server/: app.py
smartcontext/: __init__.py  _client.py  _sync.py  analytics.py  cache.py  config.py  main.py
smartcontext/api/: routes_admin.py  routes_chat.py
smartcontext/config/: loader.py  registry.py
smartcontext/core/: __init__.py  context_assembler.py  intent_predictor.py  pipeline.py  prompt_builder.py
smartcontext/dashboard/: app.py
smartcontext/discovery/: auto_intent.py
smartcontext/integrations/: langchain.py  litellm_wrapper.py
smartcontext/providers/: __init__.py  llm.py  session.py
smartcontext/server/: app.py
tests/: conftest.py  test_analytics.py  test_bitemporal.py  test_bm25.py  test_cache.py  test_chunker.py  test_client_retrieval_wiring.py  test_context_assembler.py  test_context_window.py  test_discovery.py  test_eval_harness.py  test_fusion.py  test_graph_traverse.py  test_grounded_system.py  test_hooks.py  test_hybrid.py  test_ingest_dispatch.py  test_ingest_documents.py  test_ingest_stream.py  test_intent_predictor.py  test_lifecycle.py  test_memory_manager.py  test_memory_standalone.py  test_pipeline.py  test_profiles.py  test_prompt_builder.py  test_provenance.py  test_rerank.py  test_smart_ops.py  test_smartcontext.py  test_stores.py  test_summary_tree.py
