[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-system"
version = "0.3.0"
description = "Intent-aware memory + context management for AI agents. Remember, recall, respond."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0",
    "litellm>=1.40.0",
    "instructor>=1.3.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.0.0"]
qdrant = ["qdrant-client>=1.9.0"]
neo4j = ["neo4j>=5.0.0"]
redis = ["redis>=5.0.0"]
server = ["fastapi>=0.115.0", "uvicorn[standard]>=0.30.0"]
dashboard = ["fastapi>=0.115.0", "uvicorn[standard]>=0.30.0", "jinja2>=3.1.0"]
discovery = ["scikit-learn>=1.4.0", "sentence-transformers>=3.0.0"]
retrieval = ["rank-bm25>=0.2.2"]
rerank = ["sentence-transformers>=3.0.0"]
cohere = ["cohere>=5.0.0"]
ingestion = [
    "pypdf>=4.0.0",
    "trafilatura>=1.6.0",
    "httpx>=0.27.0",
    "tiktoken>=0.7.0",
    "beautifulsoup4>=4.12.0",
]
ingestion-pro = ["pymupdf>=1.24.0"]
multimodal = ["pillow>=10.0.0"]
production = ["memory-system[embeddings,qdrant,neo4j,redis]"]
all = ["memory-system[embeddings,server,dashboard,qdrant,neo4j,redis,discovery,retrieval,rerank,ingestion]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.setuptools.packages.find]
include = ["memory_system*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
